--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,19 +1,3 @@
-<!-- <!doctype html>
-<html class="no-js" lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="apple-mobile-web-app-title" content="Yavorsky">
-  <title>Yavorsky</title>
-  <link rel="stylesheet" href="/stylesheets/app.css">
-  <script src="/javascripts/vendor.js"></script>
-  <script src="/javascripts/app.js"></script>
-  <script>require('initialize');</script>
-</head>
-<body>
-</body>
-</html>
- -->
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -25,6 +9,15 @@
   <style>@import url(http://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic|Raleway:400,100,200,300,500,600,700,800,900);</style>
   <script src="/javascripts/vendor.js"></script>
   <script src="/javascripts/app.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-57513836-1', 'auto');
+    ga('send', 'pageview');
+  </script>
   <script>require('initialize')</script>
 </head>
 <body>
