--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Artem Yavorsky — web consultant and libertarian.">
+  <meta name="author" content="Artem Yavorsky">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Yavorsky">
   <title>Yavorsky</title>
+  <link rel="author" href="https://plus.google.com/+ArtemYavorsky">
   <link rel="stylesheet" href="/stylesheets/app.css">
   <style>@import url(http://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic|Raleway:400,100,200,300,500,600,700,800,900);</style>
   <script src="/javascripts/vendor.js"></script>
