--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Artem Yavorsky">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Yavorsky">
+  <meta name="google-site-verification" content="HrJgGzwk59wULG1TqvSlAFILv7H1joRu2TgoLTe8xes" />
   <title>Yavorsky</title>
   <link rel="author" href="https://plus.google.com/+ArtemYavorsky">
   <link rel="stylesheet" href="/stylesheets/app.css">
